# Lancet2

./: .clang-tidy  .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  mkdocs.yml  pixi.toml
.claude/: commit-style.json  cost-model.md  protected_paths.txt  settings.json  settings.local.json.example
.claude/agent-memory/: README.md  assembly-and-calling-expert.md  fresh-reviewer.md  probe-interpreter.md  sanitizer-triage.md  vcf-validator.md
.claude/agents/: README.md  assembly-and-calling-expert.md  fresh-reviewer.md  perf-analyst.md  probe-interpreter.md  sanitizer-triage.md  vcf-validator.md
.claude/commands/: README.md  (+13 more)
benchmarks/: CMakeLists.txt  extractor_bench.cpp  hamming_bench.cpp  main.cpp  repeat_bench.cpp
benchmarks/results/: extractor_bench_report.md  repeat_bench.Intel_Skylake_results.json  repeat_bench.intrinsics.Intel_Skylake_results.json  repeat_bench_report.md
cmake/: build_toolchain.cmake  build_wfa2.sh  compiler_flags.cmake  configure_gperftools.sh  configure_htslib.sh  dependencies.cmake  optimization_flags.cmake  platform_checks.cmake  version.cmake
conda/: recipe.yaml
docs/: PROBE_TRACKING.md  PROFILING.md  STYLE_GUIDE.md  index.md  publications.md  reference.md
docs_dev/: README.md  ai_bundle_overview.md
profiling/: history.jsonl
scripts/: analyze_debug_run.py  analyze_probe_results.py  analyze_profile.py  export_docs.py  prep_stm_viz.sh  profile_report.html.j2  run_clang_tidy.py  run_iwyu.py  truth_concordance.py  update_changelog.sh
tests/: CMakeLists.txt  test_config.h.inc
(+237 files in other folders)
